--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,45 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
-  <display-name>Calculator</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
+  <display-name>calculator</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>AdditionServlet</display-name>
-    <servlet-name>AdditionServlet</servlet-name>
-    <servlet-class>com.itsc.AdditionServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AdditionServlet</servlet-name>
-    <url-pattern>/AdditionServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>MultiplicationServlet</display-name>
-    <servlet-name>MultiplicationServlet</servlet-name>
-    <servlet-class>com.itsc.MultiplicationServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>MultiplicationServlet</servlet-name>
-    <url-pattern>/MultiplicationServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>OperationServlet</display-name>
-    <servlet-name>OperationServlet</servlet-name>
-    <servlet-class>com.itsc.OperationServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>OperationServlet</servlet-name>
-    <url-pattern>/OperationServlet</url-pattern>
-  </servlet-mapping>
+    <welcome-file>Calculater.html</welcome-file>
+      </welcome-file-list>
+      <servlet>
+      <servlet-name>Operational</servlet-name>
+      <servlet-class>OperationalServlet</servlet-class>
+      </servlet>
+      <servlet-mapping>
+      <servlet-name>Operational</servlet-name>
+      <url-pattern>/OperationalServlet</url-pattern>
+      </servlet-mapping>
 </web-app>
